# CEDICA

./: .gitignore  README.md
admin/: .gitignore  app.py  pyproject.toml  test_bd.py  test_pagos.py
admin/src/core/: board.py  database.py  seeds.py
admin/src/core/auth/: __init__.py  permisos.py  roles.py  user.py
admin/src/core/board/: __init__.py  issue.py  label.py
admin/src/core/cobros/: __init__.py  forms.py  models.py
admin/src/core/contacto/: __init__.py  forms.py  models.py
admin/src/core/contenido/: __init__.py  contenido.py
admin/src/core/ecuestre/: __init__.py  ecuestre.py  ecuestredocs.py  sedes.py
admin/src/core/equipo/: __init__.py  extra_models.py  forms.py  models.py
admin/src/core/jya/: __init__.py  forms.py  models.py
admin/src/core/pagos/: __init__.py  forms.py  models.py  pagos.py
admin/src/core/sql/: insert_localidades.sql  insert_provincias.sql
admin/src/web/: __init__.py  config.py  helpers.py  storage.py
admin/src/web/api/: contenido.py  issues.py
admin/src/web/controllers/: auth.py  cobros.py  contacto.py  contenido.py  ecuestre.py  equipo.py  graficos.py  issues.py  jya.py  legajo.py  pagos.py  reportes.py  usuarios.py
admin/src/web/handlers/: auth.py  error.py
admin/src/web/schemas/: contenido.py  issue.py
admin/src/web/templates/: accepting_user.html  add_client.html  delete_client.html  ecuestre.html  edit_client.html  equipo.html  error.html  home.html  (+7 more)
admin/static/: Styles.css  crear_usuario_Style.css  errorStyle.css  listadoStyle.css  styles.css  ver_usuario.css
admin/tests/: test_errores.py  test_pagos.py
(+108 files in other folders)
