[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Martin <martin.antonovich@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.3"
flask = "^3.0.3"
flask-wtf = "^1.2.1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
minio = "^7.2.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
